--- a/styleCss/style.css
+++ b/styleCss/style.css
@@ -1257,6 +1257,7 @@ footer .copyright p {
     outline: none;
     border: 1px solid #e1e1e1;
     border-radius: 8px;
+    font-size: 20px;
 }
 
 #login form .normal {
@@ -1452,8 +1453,16 @@ footer .copyright p {
     /* :::::about page ends here :::::*/
 
     /* :::::login page starts here :::::*/
+    #login {
+    width: 93%;
+    margin: 50px auto;
+    text-align: center;
+    border: 1px solid #e2e9e1;
+    border-radius: 8px;
+}
 
     #login form input {
+        font-size: 18px;
         width: 100%;
         padding: 15px;
         margin: 15px 0;
@@ -1461,6 +1470,8 @@ footer .copyright p {
         border: 1px solid #e1e1e1;
         border-radius: 8px;
     }
+
+    
 
     /* :::::login page ends here :::::*/
 
