--- a/styleCss/style.css
+++ b/styleCss/style.css
@@ -1421,6 +1421,10 @@ footer .copyright p {
 
     }
 
+    .hello-marquee {
+    width: 60%;
+}
+
     /* :::::singlproduct starts here::::: */
     #product-details .row {
         display: flex;
